Polish and removing duplicated code to Improve maintainability when parsing CPE and purls from SBOM scans (#13389)